map layout bugfix

--- a/app/styles/asset.scss
+++ b/app/styles/asset.scss
@@ -15,6 +15,10 @@
   }
 }
 
+.img-col {
+  height: 100%;
+}
+
 .image-wrapper {
   cursor    : zoom-in;
   display   : block;
