--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -28,6 +28,7 @@ body {
   position  : relative;
 
   a {
+    cursor : pointer;
     outline: none;
   }
 }
